new item added to educational portal

--- a/educational-portal/index.html
+++ b/educational-portal/index.html
@@ -157,7 +157,24 @@
                         <ul class="educational-list list-reset">
 
                             <li class="educational-item">
-                                <div class="educational-wrapper">
+                                <div class="educational-wrapper2">
+                                    <div class="educational-text__wrapper flex">
+                                        <a href="https://smartcompliance.podia.com" class="educational-type__link">DOCUMENT</a>
+                                        <h3 class="educational__heading subtitle__global">
+
+                                            <a href="https://smartcompliance.podia.com/general-whitepaper-template" target="_blank" class="educational__link">
+                                                General Whitepaper Template
+                                            </a>
+                                        </h3>
+                                        <p class="educational__price descr__global">
+                                            Free
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+
+                            <li class="educational-item">
+                                <div class="educational-wrapper1">
                                     <div class="educational-text__wrapper flex">
                                         <a href="https://smartcompliance.podia.com" class="educational-type__link">WEBINAR</a>
                                         <h3 class="educational__heading subtitle__global">
