--- a/index.html
+++ b/index.html
@@ -192,7 +192,19 @@
                         <div class="swiper">
                             <div class="swiper-wrapper">
 
-                                <div class="swiper-slide slide-1">
+                                <div class="swiper-slide slide-9">
+                                    <div class="swiper__content">
+                                        <a href="https://smartcompliance.podia.com/general-whitepaper-template" class="swiper__section-link">DOCUMENT DOWNLOAD</a>
+                                        <h3 class="swiper__heading heading__global">
+                                            <a class="swiper__heading-link" href="https://smartcompliance.podia.com/general-whitepaper-template" _blank">
+                                                General Whitepaper Template
+                                            </a>
+                                        </h3>
+                                        <a href=".https://smartcompliance.podia.com/general-whitepaper-template" target="_blank" class="swiper__link">Read more</a>
+                                    </div>
+                                </div>
+
+                                <div class="swiper-slide slide-8">
                                     <div class="swiper__content">
                                         <a href="./content-corner/index.html" class="swiper__section-link">BLOG</a>
                                         <h3 class="swiper__heading heading__global">
@@ -204,7 +216,7 @@
                                     </div>
                                 </div>
 
-                                <div class="swiper-slide slide-2">
+                                <div class="swiper-slide slide-7">
                                     <div class="swiper__content">
                                         <a href="./content-corner/index.html" class="swiper__section-link">BLOG</a>
                                         <h3 class="swiper__heading heading__global">
@@ -216,7 +228,7 @@
                                     </div>
                                 </div>
 
-                                <div class="swiper-slide slide-3">
+                                <div class="swiper-slide slide-6">
                                     <div class="swiper__content">
                                         <a href="https://youtu.be/ZTYX4GZhpdA?si=_zivaED0NREY-Ryp" class="swiper__section-link">PODCAST</a>
                                         <h3 class="swiper__heading heading__global">
@@ -228,7 +240,7 @@
                                     </div>
                                 </div>
 
-                                <div class="swiper-slide slide-4">
+                                <div class="swiper-slide slide-5">
                                     <div class="swiper__content">
                                         <a href="./content-corner/index.html" class="swiper__section-link">BLOG</a>
                                         <h3 class="swiper__heading heading__global">
@@ -240,7 +252,7 @@
                                     </div>
                                 </div>
 
-                                <div class="swiper-slide slide-5">
+                                <div class="swiper-slide slide-4">
                                     <div class="swiper__content">
                                         <a href="https://cointelegraph.com/press-releases/crypto2030-a-convergence-of-elite-minds-in-davos" class="swiper__section-link">PRESS RELEASE</a>
                                         <h3 class="swiper__heading heading__global">
@@ -252,7 +264,7 @@
                                     </div>
                                 </div>
 
-                                <div class="swiper-slide slide-6">
+                                <div class="swiper-slide slide-3">
                                     <div class="swiper__content">
                                         <a href="./content-corner/index.html" class="swiper__section-link">BLOG</a>
                                         <h3 class="swiper__heading heading__global">
@@ -264,7 +276,7 @@
                                     </div>
                                 </div>
 
-                                <div class="swiper-slide slide-7">
+                                <div class="swiper-slide slide-2">
                                     <div class="swiper__content">
                                         <a href="./content-corner/index.html" class="swiper__section-link">BLOG</a>
                                         <h3 class="swiper__heading heading__global">
@@ -276,7 +288,7 @@
                                     </div>
                                 </div>
 
-                                <div class="swiper-slide slide-8">
+                                <div class="swiper-slide slide-1">
                                     <div class="swiper__content">
                                         <a href="https://smartcompliance.podia.com/creating-legal-entity-in-switzerland-2023" class="swiper__section-link">WEBINAR</a>
                                         <h3 class="swiper__heading heading__global">
