new webinar added

--- a/index.html
+++ b/index.html
@@ -192,6 +192,18 @@
                         <div class="swiper">
                             <div class="swiper-wrapper">
 
+                                <div class="swiper-slide slide-10">
+                                    <div class="swiper__content">
+                                        <a href="https://smartcompliance.podia.com/liquidity-secrets-unveiled-the-untold-truth-about-web3-liquidity-recorded-webinar-29-08-2024" class="swiper__section-link">WEBINAR</a>
+                                        <h3 class="swiper__heading heading__global">
+                                            <a class="swiper__heading-link" href="https://smartcompliance.podia.com/liquidity-secrets-unveiled-the-untold-truth-about-web3-liquidity-recorded-webinar-29-08-2024" _blank">
+                                                Liquidity Secrets Unveiled: The Untold Truth About Web3 Liquidity
+                                            </a>
+                                        </h3>
+                                        <a href=".https://smartcompliance.podia.com/liquidity-secrets-unveiled-the-untold-truth-about-web3-liquidity-recorded-webinar-29-08-2024" target="_blank" class="swiper__link">Read more</a>
+                                    </div>
+                                </div>
+
                                 <div class="swiper-slide slide-9">
                                     <div class="swiper__content">
                                         <a href="https://smartcompliance.podia.com/general-whitepaper-template" class="swiper__section-link">DOCUMENT DOWNLOAD</a>
