--- a/index.html
+++ b/index.html
@@ -192,6 +192,30 @@
                         <div class="swiper">
                             <div class="swiper-wrapper">
 
+                                <div class="swiper-slide slide-12">
+                                    <div class="swiper__content">
+                                        <a href="./content-corner/index.html" class="swiper__section-link">BLOG</a>
+                                        <h3 class="swiper__heading heading__global">
+                                            <a class="swiper__heading-link" href="./blog/key-requirements-for-crypto-asset-white-papers/index.html" target="_blank">
+                                                Key Requirements for Crypto-Asset White Papers
+                                            </a>
+                                        </h3>
+                                        <a href="./blog/key-requirements-for-crypto-asset-white-papers/index.html" target="_blank" class="swiper__link">Read more</a>
+                                    </div>
+                                </div>
+
+                                <div class="swiper-slide slide-11">
+                                    <div class="swiper__content">
+                                        <a href="./content-corner/index.html" class="swiper__section-link">BLOG</a>
+                                        <h3 class="swiper__heading heading__global">
+                                            <a class="swiper__heading-link" href="./blog/tokenization-in-el-salvador/index.html" target="_blank">
+                                                Tokenization in&nbsp;El&nbsp;Salvador: Unlocking Global Asset Opportunities
+                                            </a>
+                                        </h3>
+                                        <a href="./blog/tokenization-in-el-salvador/index.html" target="_blank" class="swiper__link">Read more</a>
+                                    </div>
+                                </div>
+
                                 <div class="swiper-slide slide-10">
                                     <div class="swiper__content">
                                         <a href="https://smartcompliance.podia.com/liquidity-secrets-unveiled-the-untold-truth-about-web3-liquidity-recorded-webinar-29-08-2024" class="swiper__section-link">WEBINAR</a>
@@ -680,7 +704,7 @@
                                 Landis + Gyr-Strasse 1, <br> 6300&nbsp;Zug, Switzerland
                             </p>
 
-                            <a class="address__link href="https://spamty.eu/show/v7/175/04e4b9f1ce/" onclick="mailhidepopup=window.open('https://spamty.eu/show/v7/175/04e4b9f1ce/','mailhidepopup','width=580,height=635'); return false;">Send an email</a>
+                            <a class="address__link href=" https://spamty.eu/show/v7/175/04e4b9f1ce/" onclick="mailhidepopup=window.open('https://spamty.eu/show/v7/175/04e4b9f1ce/','mailhidepopup','width=580,height=635'); return false;">Send an email</a>
                             <a class="address__link" href="tel:+41765820974">+41&nbsp;765 82 0974</a>
                             <a href="https://www.linkedin.com/company/smart-compliance-gmbh/" class="address__link li__logo">
                                 <svg width="50px" height="50px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="none">
@@ -718,7 +742,7 @@
                                     </a>
                                 </li>
                                 <li class="footer__item">
-                                    <a href="./contact/index.html class="footer__link nav__link">
+                                    <a href="./contact/index.html class=" footer__link nav__link">
                                         Contact
                                     </a>
                                 </li>
