--- a/events/index.html
+++ b/events/index.html
@@ -139,7 +139,7 @@
                     Upcoming events
                 </h2>
 
-                <div class="row upcoming-events__row">
+                <!-- <div class="row upcoming-events__row">
                     <div class="col-xl-8 offset-xl-2 col-12">
 
                         <h3 class="events-preview__heading subtitle__global text-center">
@@ -149,6 +149,30 @@
                             Please check back later for updates or <b class="text_bold"><a href="http://eepurl.com/ioqyWo" target="_blank" class="subscription-link__body">subscribe to our newsletter</a></b>  to receive notifications about future events </p>
                     </div>
 
+                </div> -->
+
+                <div class="row">
+                    <div class="col-xl-8 offset-xl-2 col-12">
+                        <ul class="events-list list-reset">
+
+                            <li class="events-item">
+                                <article class="events-preview">
+                                    <a href="../events/web3hubdavos/index.html" class="events-preview__link">
+                                        <img class="events-preview__image" src="../img/davos-web3-preview.jpeg" alt="Events preview image">
+                                        <div class="events-preview__text">
+                                            <h3 class="events-preview__heading subtitle__global">
+                                                Join us at Web3 Hub in Davos
+                                            </h3>
+                                            <p class="events-preview__descr descr__global">
+                                                Join Ekaterina Anthony, Board Member, Co-chair of&nbsp;the AML Working Group, and CEO of&nbsp;Crypto Valley Association &amp;&nbsp;SMART-compliance GmbH, at #Web3HubDavos 2025! From January 20&ndash;23 in&nbsp;Davos, experience four days of&nbsp;blockchain insights, networking, and innovation. </p>
+                                            </p>
+                                        </div>
+                                    </a>
+                                </article>
+                            </li>
+
+                        </ul>
+                    </div>
                 </div>
 
                 <h2 class="events__heading heading__global">
