--- a/index.html
+++ b/index.html
@@ -192,6 +192,18 @@
                         <div class="swiper">
                             <div class="swiper-wrapper">
 
+                                <div class="swiper-slide slide-13">
+                                    <div class="swiper__content">
+                                        <a href="./events/index.html" class="swiper__section-link">EVENTS</a>
+                                        <h3 class="swiper__heading heading__global">
+                                            <a class="swiper__heading-link" href="./events/web3hubdavos/index.html" target="_blank">
+                                                Join us at Web3 Hub in Davos!
+                                            </a>
+                                        </h3>
+                                        <a href="./events/web3hubdavos/index.html" target="_blank" class="swiper__link">Read more</a>
+                                    </div>
+                                </div>
+
                                 <div class="swiper-slide slide-12">
                                     <div class="swiper__content">
                                         <a href="./content-corner/index.html" class="swiper__section-link">BLOG</a>
